--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-react": "^6.6.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.1",
     "jasmine-node": "^1.14.5",
     "json-loader": "^0.5.4",
