--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Game of Throne Second Edition Card Game Server",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine-node test/server && karma start karma.config.js --single-run"
+    "test": "JASMINE_CONFIG_PATH=./jasmine.json jasmine && karma start karma.config.js --single-run"
   },
   "repository": {
     "type": "git",
@@ -65,7 +65,6 @@
     "html-webpack-plugin": "^2.22.0",
     "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.1",
-    "jasmine-node": "^1.14.5",
     "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-babel-preprocessor": "^6.0.1",
